--- a/www/css/avo-main.css
+++ b/www/css/avo-main.css
@@ -50,45 +50,45 @@
   font-family: "Montserrat";
   font-weight: 400;
   font-style: normal;
-  src: url("/fonts/montserrat-regular.eot");
-  src: url("/fonts/montserrat-regular.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-regular.woff2") format("woff2"), url("/fonts/montserrat-regular.woff") format("woff"); }
+  src: url("http://develop.viaa2.mono.digital/fonts/montserrat-regular.eot");
+  src: url("http://develop.viaa2.mono.digital/fonts/montserrat-regular.eot?#iefix") format("embedded-opentype"), url("http://develop.viaa2.mono.digital/fonts/montserrat-regular.woff2") format("woff2"), url("http://develop.viaa2.mono.digital/fonts/montserrat-regular.woff") format("woff"); }
 
 @font-face {
   font-family: "Montserrat";
   font-weight: 400;
   font-style: italic;
-  src: url("/fonts/montserrat-italic.eot");
-  src: url("/fonts/montserrat-italic.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-italic.woff2") format("woff2"), url("/fonts/montserrat-italic.woff") format("woff"); }
+  src: url("http://develop.viaa2.mono.digital/fonts/montserrat-italic.eot");
+  src: url("http://develop.viaa2.mono.digital/fonts/montserrat-italic.eot?#iefix") format("embedded-opentype"), url("http://develop.viaa2.mono.digital/fonts/montserrat-italic.woff2") format("woff2"), url("http://develop.viaa2.mono.digital/fonts/montserrat-italic.woff") format("woff"); }
 
 @font-face {
   font-family: "Montserrat";
   font-weight: 500;
   font-style: normal;
-  src: url("/fonts/montserrat-medium.eot");
-  src: url("/fonts/montserrat-medium.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-medium.woff2") format("woff2"), url("/fonts/montserrat-medium.woff") format("woff"); }
+  src: url("http://develop.viaa2.mono.digital/fonts/montserrat-medium.eot");
+  src: url("http://develop.viaa2.mono.digital/fonts/montserrat-medium.eot?#iefix") format("embedded-opentype"), url("http://develop.viaa2.mono.digital/fonts/montserrat-medium.woff2") format("woff2"), url("http://develop.viaa2.mono.digital/fonts/montserrat-medium.woff") format("woff"); }
 
 @font-face {
   font-family: "Montserrat";
   font-weight: 700;
   font-style: normal;
-  src: url("/fonts/montserrat-bold.eot");
-  src: url("/fonts/montserrat-bold.eot?#iefix") format("embedded-opentype"), url("/fonts/montserrat-bold.woff2") format("woff2"), url("/fonts/montserrat-bold.woff") format("woff"); }
+  src: url("http://develop.viaa2.mono.digital/fonts/montserrat-bold.eot");
+  src: url("http://develop.viaa2.mono.digital/fonts/montserrat-bold.eot?#iefix") format("embedded-opentype"), url("http://develop.viaa2.mono.digital/fonts/montserrat-bold.woff2") format("woff2"), url("http://develop.viaa2.mono.digital/fonts/montserrat-bold.woff") format("woff"); }
 
 @font-face {
   font-family: "Avenir LT Std";
   font-weight: 600;
-  src: url("/fonts/avenir-lt-std-heavy.eot");
-  src: url("/fonts/avenir-lt-std-heavy.eot?#iefix") format("embedded-opentype"), url("/fonts/avenir-lt-std-heavy.woff2") format("woff2"), url("/fonts/avenir-lt-std-heavy.woff") format("woff"), url("/fonts/avenir-lt-std-heavy.ttf") format("truetype"); }
+  src: url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-heavy.eot");
+  src: url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-heavy.eot?#iefix") format("embedded-opentype"), url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-heavy.woff2") format("woff2"), url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-heavy.woff") format("woff"), url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-heavy.ttf") format("truetype"); }
 
 @font-face {
   font-family: "Avenir LT Std";
   font-weight: 500;
-  src: url("/fonts/avenir-lt-std-medium.eot");
-  src: url("/fonts/avenir-lt-std-medium.eot?#iefix") format("embedded-opentype"), url("/fonts/avenir-lt-std-medium.woff2") format("woff2"), url("/fonts/avenir-lt-std-medium.woff") format("woff"), url("/fonts/avenir-lt-std-medium.ttf") format("truetype"); }
+  src: url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-medium.eot");
+  src: url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-medium.eot?#iefix") format("embedded-opentype"), url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-medium.woff2") format("woff2"), url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-medium.woff") format("woff"), url("http://develop.viaa2.mono.digital/fonts/avenir-lt-std-medium.ttf") format("truetype"); }
 
 /* Generic: CSS reset, box-sizing, global CSS tweaks
    ========================================================================== */
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -4287,8 +4287,8 @@ th.c-table__header--sortable {
 /* ==========================================================================
    Theme mixin : Put all skin css related code here
 
-   Take in inputs colors variables and output a theme skin, 
-   the default theme is dark if the mixin is used without any variables. 
+   Take in inputs colors variables and output a theme skin,
+   the default theme is dark if the mixin is used without any variables.
 
    Please group CSS by files to have an easy way to know what belong to where
 
