--- a/www/css/app.css
+++ b/www/css/app.css
@@ -12,7 +12,7 @@
 	padding-bottom: 1rem;
 }
 .grd {
-	padding-top: 10%;
+	padding-top: 5%;
 }
 
 .alert-danger {
@@ -22,6 +22,18 @@
 	border-color: #e74c3c;
 	background-color: white;
 	background-image: repeating-linear-gradient(-45deg, transparent, rgba(250,250,250,.99) 2px, rgba(216, 216, 216, 0.2) 2px, rgba(216, 216, 216, 0.2) 4px);
+}
+
+.btn--meemoo {
+    border-color: #28a0c8;
+    background-color: #28a0c8;
+    color: #fff;
+}
+
+.btn--meemoo:active, .btn--meemoo:focus, .btn--meemoo:hover {
+    color: #fff;
+    background-color: #009690;
+    border-color: transparent;
 }
 
 /* Flex-grid 5 columns */
