--- a/www/css/hetarchief-full.css
+++ b/www/css/hetarchief-full.css
@@ -1604,32 +1604,32 @@ button.c-button {
   font-size: 4.8rem;
   margin: 2.4rem 0;
   line-height: 1.25;
-  font-family: "Avenir LT Std", "Avenir Next", Avenir, SofiaPro-Regular, sans-serif;
-  font-weight: 500; }
+  font-family: SofiaPro-Regular, "Avenir LT Std", "Avenir Next", Avenir, sans-serif;
+  font-weight: 700; }
 
 .c-h1, .c-content h1 {
-  font-family: "Avenir LT Std", "Avenir Next", Avenir, SofiaPro-Regular, sans-serif;
-  font-weight: 500;
+  font-family: SofiaPro-Regular, "Avenir LT Std", "Avenir Next", Avenir, sans-serif;
+  font-weight: 700;
   font-size: 3.2rem;
   margin: 3.2rem 0;
   line-height: 1.25; }
 
 .c-h2, .c-content h2 {
-  font-family: "Avenir LT Std", "Avenir Next", Avenir, SofiaPro-Regular, sans-serif;
-  font-weight: 500;
+  font-family: SofiaPro-Regular, "Avenir LT Std", "Avenir Next", Avenir, sans-serif;
+  font-weight: 700;
   font-size: 2.4rem;
   margin: 2.4rem 0;
   line-height: 1.25; }
 
 .c-h3, .c-content h3 {
-  font-family: "Avenir LT Std", "Avenir Next", Avenir, SofiaPro-Regular, sans-serif;
+  font-family: SofiaPro-Regular, "Avenir LT Std", "Avenir Next", Avenir, sans-serif;
   font-weight: 500;
   font-size: 2.1rem;
   margin: 2.1rem 0 1.2rem;
   line-height: 1.25; }
 
 .c-h4, .c-content h4 {
-  font-family: "SofiaPro-Regular", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  font-family: SofiaPro-Regular, "Avenir LT Std", "Avenir Next", Avenir, sans-serif;
   font-size: 1.5rem;
   font-weight: 500;
   margin: 1.5rem 0;
